# jeff-discord

./: .gitignore  Cargo.toml  Dockerfile  Procfile  compose.yml  main.py  requirements.txt  sample.env.sh
.github/workflows/: docker-publish.yml
cogs/: color_commands.py
cogs/utils/: db.py
docker/: .gitignore  script.sh
llm_docker/: .gitignore  compose.yml  run_ollama.sh  run_openwebui.sh
llm_python_client/: pixi.toml  test_client.py
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241027_011524_create_setting.rs
python/: main.py  requirements.txt
python/cogs/: talking_commands.py
python/cogs/utils/: db.py
src/: lib.rs  main.rs
src/commands/: admin.rs  color.rs  common.rs  error.rs  mod.rs  role.rs  statistic.rs  talking.rs  utils.rs
src/entities/: color_random_data.rs  global_pref.rs  mod.rs  prelude.rs
src/entities_mod/: global_pref_mod.rs  mod.rs
