[package]
name = "jeff-discord"
version = "0.1.0"
edition = "2021"
default-run = "jeff-discord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
chrono = "0.4"
colorsys = "*"
regex = "1"
lazy_static = "1"
tokio = { version = "1", features = ["full"]  }
# serenity = { version = "0.11", features = ["collector"] }
poise = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any"] }
serde = "1.0.210"
serde_json = "1.0.128"
# async-openai = { version = "0.24.1", features = ["rustls-webpki-roots"] }
async-openai = { git = "https://github.com/e8035669/async-openai.git", features = ["rustls-webpki-roots"] }
futures = "0.3.30"
sea-orm = { version = "1.1.0-rc.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

