[package]
name = "jeff-discord"
version = "0.1.0"
edition = "2021"
default-run = "jeff-discord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
chrono = "0.4"
colorsys = "*"
regex = "1"
lazy_static = "1"
tokio = { version = "1", features = ["full"]  }
poise = "0.6"
serde = "1.0"
serde_json = "1.0"
# async-openai = { version = "0.24.1", features = ["rustls-webpki-roots"] }
async-openai = { git = "https://github.com/e8035669/async-openai.git", features = ["rustls-webpki-roots"] }
futures = "0.3"
sea-orm = { version = "1.1.0-rc.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
thiserror = "1.0"
rand = "0.8"
minijinja = { version = "2.4", features = ["loader"] }

